--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -6,5 +6,9 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable RGB underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_SPLIT=y
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y   # For the left side (master)
+CONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y # For the right side (slave)
+CONFIG_ZMK_RGB_UNDERGLOW=y        # To enable RGB functionality
+CONFIG_ZMK_RGB_NUM_PIXELS=12      # Number of RGB LEDs on each half (adjust to your hardware)
+CONFIG_ZMK_RGB_EFFECTS=y
