--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -7,8 +7,8 @@ CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y   # For the left side (master)
-CONFIG_ZMK_SPLIT_ROLE_PERIPHERAL=y # For the right side (slave)
-CONFIG_ZMK_RGB_UNDERGLOW=y        # To enable RGB functionality
-CONFIG_ZMK_RGB_NUM_PIXELS=12      # Number of RGB LEDs on each half (adjust to your hardware)
+# ZMK automatically determines central vs. peripheral based on the side
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_EFFECTS=y
+CONFIG_ZMK_RGB_NUM_PIXELS=5     # Replace with your number of LEDs per half
