--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@
 ---
 # For the `nice_view_spi` section
 nice_view_spi:
-  cs-gpios = <&gpio1 1 GPIO_ACTIVE_HIGH>;
+  cs-gpios: "<&gpio1 1 GPIO_ACTIVE_HIGH>"
 include:
   - board: nice_nano_v2
     shield: splitkb_aurora_lily58_left nice_view_adapter nice_view
