--- a/build.yaml
+++ b/build.yaml
@@ -25,5 +25,7 @@ nice_view_spi:
 include:
   - board: nice_nano_v2
     shield: splitkb_aurora_lily58_left nice_view_adapter nice_view
+    artifact-name: lily58_left
   - board: nice_nano_v2
     shield: splitkb_aurora_lily58_right nice_view_adapter nice_view
+    artifact-name: lily58_right
