--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -7,3 +7,10 @@ CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_NICE_VIEW=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_LOGO=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_LAYERS=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_BATTERY=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_WPM=y
