--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -2,11 +2,21 @@
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Uncomment the following line to enable the OLED Display
+# Enable the OLED display
 CONFIG_ZMK_DISPLAY=y
+
+# Enable Nice!View for the OLED
+CONFIG_ZMK_NICE_VIEW=y
+
+# Enable Nice!View display features
+CONFIG_ZMK_NICE_VIEW_DISPLAY=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_LAYERS=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_BATTERY=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_LOGO=y
+CONFIG_ZMK_NICE_VIEW_DISPLAY_WPM=y
+
 
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_NICE_VIEW=y
-CONFIG_ZMK_NICE_VIEW_DISPLAY=y
+
+
