--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,8 @@
 #
 ---
 # For the `nice_view_spi` section
-
+nice_view_spi:
+  - cs-gpios: "<&gpio1 1 GPIO_ACTIVE_HIGH>"
 
 include:
   - board: nice_nano_v2
