--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -4,8 +4,14 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Enable the OLED display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
 
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 
