--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -4,7 +4,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Enable the OLED display
 CONFIG_ZMK_DISPLAY=y
-
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Uncomment the following lines to enable RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
